# ngs-petsc

./: CMakeLists.txt  README.md  README.rst
cmake/: pcomplex.cpp  plongind.cpp
cmake/cmake_modules/: FindPETSc.cmake
examples/: aux_maxwell.py  cmagnet_aux.py  cmagnet_ho_lo.py  fast_embed.py  lin_elast.py  nonlin_elast.py  poisson.py
examples/complex/: scattering.py
examples/complex/slepc/: helmholtz.py
examples/petsc4py/: poisson.py
examples/python/complex/: scattering.py
examples/python/real/: ho_lo.py  lin_elast.py  poisson.py
examples/real/: cmagnet_aux.py  lin_elast.py  nonlin_elast.py  stokes_fieldsplit.py
examples/real/cpp/: poisson.cpp
examples/real/python/: cmagnet_ho_lo.py  fast_embed.py
python/: CMakeLists.txt  __init__.py
slepc4py/: Poisson.py
src/: CMakeLists.txt  petsc_interface.cpp  petsc_interface.hpp  petsc_ksp.cpp  petsc_ksp.hpp  petsc_linalg.cpp  petsc_linalg.hpp  petsc_ops.hpp  petsc_pc.cpp  petsc_pc.hpp  petsc_snes.cpp  petsc_snes.hpp  python_ngspetsc.cpp  python_ngspetsc.hpp  python_petsc_if.cpp  slepc_eps.cpp  slepc_eps.hpp  slepc_interface.hpp  typedefs.hpp  utils.cpp  utils.hpp
